# IDS-based-Machine-Learning

./: Readme.md  Readme.txt  install-new.sh  requirements-fix.txt  start-new.sh  start.sh  zeek.conf  zeek.yml
Backup/: Install.sh  Start.sh
Configuration/: crontab.txt
Start Script/: start.sh
StratosphereLinuxIPS/output/: tes.json
zeek/auxil/bifcl/: CHANGES
zeek/auxil/zeek-archiver/ci/fedora-33/: Dockerfile
zeek/auxil/zeek-client/: CMakeLists.txt  README.md  zeek-client
